feat(skills): Principal-level depth pass over categories A, B and C
Deep review of 53 skills across JVM Memory and GC, JVM Execution and
Compilation, and Measurement, Profiling and Observability, against the
expert-audit brief: accuracy on JDK 25, decision frameworks, trade-offs,
failure modes, troubleshooting tables and production behaviour.

Flags, log lines, defaults and error texts were executed on Temurin
25.0.3 (and GraalVM CE 25.0.2 where relevant) rather than recalled.
Claims that could not be executed here are marked as such in the text.

Ten skills take a major bump because guidance was inverted or removed,
not merely extended:

- allocation-profiling: async-profiler alloc mode uses JVMTI sampling,
  not the TLAB hooks, and never touches perf_events
- code-cache-segments: a full code heap spills into the next heap
  instead of stopping compilation; the sweeper and the zombie state
  are gone since JDK 20; jstat prints Failed, not Bailout
- deoptimization: make_not_compilable is C2-level only, and class
  hierarchy invalidation is invisible to JFR and -Xlog:deoptimization
- ebpf-for-jvm: ExtendedDTraceProbes no longer exists; DWARF cannot
  unwind JIT frames
- epsilon-and-shenandoah-internals: the load reference barrier is
  conditional and has cost no forwarding word since JDK 13
- g1-tuning-for-slo: every baseline command line was missing
  -XX:+UnlockExperimentalVMOptions and would not start;
  G1MixedGCCountTarget is a divisor, not a ceiling on attempts
- graalvm-jit: the -Dgraal.* options were renamed in JDK 22 and one of
  them never existed; PrintCompilation cannot tell which compiler ran
- jit-inlining-and-escape-analysis: a lambda capture is not an escape,
  and a branch that never executes does not defeat scalar replacement
- jvm-bytecode: four rules contradicted javac and the JVM on 25
- startup-cds-crac-leyden: the AOT cache does not validate application
  JARs on 25, so AutoCreateSharedArchive is not self-healing

Also links six references that